...
            }
            .padding(.vertical, 10)
          }
        }
        .listStyle(InsetGroupedListStyle())
      }
      .navigationTitle(existingFavorite != nil ? "Edit Favorite" : "Add to Favorites")
      .navigationBarItems(
        leading:
          Button(action: {
            dismiss()
          }, label: {
            Text("Cancel")
...
              favoritesQuery.results.append(newFavorite)
              dataService.saveFavorite(newFavorite)
            }
            favoritesQuery.objectWillChange.send()
            dismiss()
          }, label: {
            Text("Save")
          })
      )
    }
  }

  private func dismiss() {
...
